# cpp-websockets-exercise

./: .gitignore  CMakeLists.txt  README.md  config.h  main.cpp  websocket.cpp  websocket.h
coinbase/: CMakeLists.txt  message.cpp  message.h  subscribe.cpp  subscribe.h
logging/: CMakeLists.txt  logging.h
shared_queue/: spsc_lockfree_queue.h
src/lib/coinbase/: CMakeLists.txt  message.cpp  message.h  subscribe.cpp  subscribe.h  ticker_logger.cpp  ticker_logger.h
src/lib/logging/: CMakeLists.txt  logging.cpp  logging.h
src/lib/shared_queue/: consumer.h  lock_queue.h  queue_abstract.h
src/lib/websocket/: CMakeLists.txt  websocket.cpp  websocket.h
test/: CMakeLists.txt  mock_session.h  test_main.cpp  test_message.cpp  test_subscribe.cpp  test_ticker_logger.cpp
websocket/: CMakeLists.txt  websocket.cpp  websocket.h
